# TGBot-Default

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: router.py  service.py
app/bot/: __init__.py  application.py  keyboards.py  texts.py
app/bot/handlers/: language.py  message.py  start.py
app/db/: __init__.py  models.py  session.py
